--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Hello World</h1>
+        <h2>This is a test</h2>
+        <h3>This is another test</h3>
     </body>
 </html>
